@@ -141,4 +141,5 @@
 - AddSlice accepts ibidas objects
 - SplitDim, HArray autogenerated dimension names now consistent across runs
 - getShape renamed to Shape. Shape types know not unknown
-
+- changed default dim of flat parameter of GroupBy for multi-dimensional groups
+- automatic renaming of dims when conflicts occur
